# telegram_travel_bot

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
.docker/: .env.debug  Dockerfile  docker-compose.debug.service.yml  docker-compose.yml
.docker/nginx/: Dockerfile  nginx.conf
apps/bot/: admin.py  apps.py  bot.py  models.py  tasks.py  utils.py  views.py
apps/bot/handlers/: common.py  find_trip.py  new_trip.py  storage.py  trips_list.py
apps/bot/migrations/: 0001_initial.py  0002_auto_20220616_0029.py  0003_auto_20220616_0035.py  0004_bottextsconfig_common_for_new_user_text.py  0005_bottextsconfig_common_start.py  0006_bottextsconfig_button_new_trip.py  0007_bottextsconfig_button_help.py  0008_auto_20220616_0047.py  0009_bottextsconfig_new_trip_select_date.py  0010_bottextsconfig_new_trip_select_hour.py  0011_bottextsconfig_new_trip_select_minutes.py  0012_bottextsconfig_new_trip_select_pass_count.py  0013_auto_20220616_0116.py  0014_bottextsconfig_new_ad_confirmed.py  0015_auto_20220616_0139.py  0016_auto_20220616_0142.py  0017_auto_20220616_0156.py  0018_bottextsconfig_trip_list_one.py  0019_bottextsconfig_trip_not_found.py  0020_auto_20220616_0609.py  0021_bottextsconfig_common_help_text.py  0022_auto_20220616_0953.py  0023_auto_20220616_1037.py  (+2 more)
apps/common/: base_test.py  utils.py
apps/trip/: admin.py  apps.py  models.py
apps/users/: admin.py  forms.py  models.py
project/: celery.py  settings.py  urls.py  wsgi.py
project/fixtures/: bot.json  trip_city.json
(+11 files in other folders)
